<?xml version="1.0"?>
<package>
  <name>manas_cv_label</name>
  <version>0.0.0</version>
  <description>The manas_cv_label package</description>
  <maintainer email="mjjdick@126.com">mjj</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
