<?xml version="1.0"?>
<package>
  <name>my_label</name>
  <version>0.0.0</version>
  <description>The my_label package</description>
  <maintainer email="mjjdick@126.com">mjj</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
